Added random choice picker

--- a/12 FAQ Collapse/index.html
+++ b/12 FAQ Collapse/index.html
@@ -74,8 +74,8 @@
             <div class="icon comment">
                 <i class="fa-regular fa-comments"></i>
             </div>
-            <div class="icon times">
-                <i class="fa-solid fa-times toggle"></i>
+            <div class="icon times toggle">
+                <i class="fa-solid fa-times"></i>
             </div>
             <div class="icon chevron toggle">
                 <i class="fa-solid fa-chevron-down"></i>
