--- a/42 Live User Filter/index.html
+++ b/42 Live User Filter/index.html
@@ -12,7 +12,7 @@
             <header class="header">
                 <h4 class="title">Live User Filter</h4>
                 <small class="subtitle">Search by name and/or location</small>
-                <input type="text" id="search" class="search" placeholder="Search">
+                <input type="text" id="filter" class="search" placeholder="Search">
             </header>
 
             <ul class="user-list" id="results">
